# CSC352_Summer_2016

./: .gitignore  README.md
Assignment 1/: a1.txt
Assignment 2/: CMakeLists.txt  a2  a2.c
Assignment 3/: CMakeLists.txt  Makefile  editor  editor.c  part  part.c  sim  sim.c
Assignment 4/: CMakeLists.txt  Makefile  driver.c  llist.c  llist.h  mru.c
Assignment 5/: CMakeLists.txt  Makefile  player.c  player.h  scores.c
Assignment 6/: CMakeLists.txt  Makefile  hashtable.c  hashtable.h  wf.c  wordfrequency.txt
Assignment 7/: Makefile  lecarchive.sh
